--- a/src/app/client/client-home/client-home.component.html
+++ b/src/app/client/client-home/client-home.component.html
@@ -32,7 +32,7 @@
 
   <!--   ✅ Product card 1 - Starts Here 👇 -->
   <div class="w-72  bg-gradient-to-r from-slate-900 to-slate-700 shadow-lg rounded-xl duration-500 hover:scale-105 hover:shadow-2xl transform transition-all">
-    <a href="#">
+    <a routerLink="/login">
       <img src="https://i.giphy.com/S6MSo1E4m7uva7Fimz.webp"
            alt="Mobile Technician Service" class="h-80 w-72 object-cover rounded-t-xl" />
       <div class="px-4 py-3 w-72">
@@ -49,7 +49,7 @@
     </a>
   </div>
   <div class="w-72 bg-gradient-to-r from-slate-900 to-slate-700 rounded-xl duration-500 hover:scale-105 hover:shadow-2xl transform transition-all">
-    <a href="#">
+    <a  routerLink="/login">
       <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWswdnlzejg4ZTdra2JmY3h1dWgxcDV4bHBoMW9zZTljMnlhY2kycyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/0hA4tcelW5KVNnPdbP/giphy.webp"
            alt="Mobile Technician Service" class="h-80 w-72 object-cover rounded-t-xl" />
       <div class="px-4 py-3 w-72">
@@ -66,14 +66,14 @@
     </a>
   </div>
   <div class="w-72 bg-gradient-to-r from-slate-900 to-slate-700 rounded-xl duration-500 hover:scale-105 hover:shadow-2xl transform transition-all">
-    <a href="#">
+    <a  routerLink="/login">
       <img src="https://i.giphy.com/IZs31Ap23eKV1VJ4dq.webp"
            alt="Mobile Technician Service" class="h-80 w-72 object-cover rounded-t-xl" />
       <div class="px-4 py-3 w-72">
         <span class="text-sm text-gray-100 font-semibold mr-3 uppercase tracking-wide">AC Technician</span>
         <p class="text-lg font-bold text-gray-200 truncate block capitalize">Expert Repairs at Your Doorstep</p>
         <div class="flex items-center mt-2">
-          <p class="text-xl font-bold text-teal-700">Starting from ₹500/-</p>
+          <p class="text-xl font-bold text-teal-600">Starting from ₹500/-</p>
           
           <div class="ml-auto p-2 bg-teal-600 rounded-full text-white hover:bg-teal-700 transition-colors duration-300 cursor-pointer">
             
