--- a/src/app/client/client-login/client-login.component.html
+++ b/src/app/client/client-login/client-login.component.html
@@ -35,7 +35,7 @@
                 </button>
             </div>
             <div class="mb-4 ">
-                <label for="email" class="text-gray-100 text-sm font-bold mb-2 inline-flex items-center">
+                <label for="email" class="text-gray-100 text-sm  mb-2 inline-flex items-center">
                     <svg class="w-6 h-6 text-gray-100 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                         <path stroke="currentColor" stroke-linecap="round" stroke-width="2.1" d="m3.5 5.5 7.893 6.036a1 1 0 0 0 1.214 0L20.5 5.5M4 19h16a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Z"/>
                       </svg>
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="mb-4">
-                <label for="password" class=" text-gray-100 text-sm font-bold mb-2 inline-flex items-center">
+                <label for="password" class=" text-gray-100 text-sm  mb-2 inline-flex items-center">
                     <svg class="w-6 h-6 text-gray-100 dark:text-white mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10V7a4 4 0 1 1 8 0v3h1a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h1Zm2-3a2 2 0 1 1 4 0v3h-4V7Zm2 6a1 1 0 0 1 1 1v3a1 1 0 1 1-2 0v-3a1 1 0 0 1 1-1Z"/>
                     </svg>
@@ -62,11 +62,11 @@
                 </div>
             </div>
             <button type="submit"
-                    class="py-2 px-4 rounded focus:outline-none block mx-auto w-40 mt-4"
+                    class="py-2 px-4 rounded focus:outline-none block mx-auto w-full mt-4"
                     [class.bg-blue-500]="loginForm.valid"
                     [class.bg-gray-300]="loginForm.invalid"
                     [disabled]="loginForm.invalid">
-                <span class="text-white  font-bold" *ngIf="loginForm.valid">Submit</span>
+                <span class="text-white " *ngIf="loginForm.valid">Submit</span>
                 <span class="text-gray-600" *ngIf="loginForm.invalid">Submit</span>
             </button>
             <div class="flex flex-col justify-center items-center mt-2 space-y-2">
